[gd_scene load_steps=12 format=3 uid="uid://dsqet8mutarh6"]

[ext_resource type="Theme" uid="uid://ye48kx1r3u5" path="res://fonts/Izayoi_Theme_Profile_Core.tres" id="1_7goli"]
[ext_resource type="Theme" uid="uid://errgec2364nv" path="res://fonts/Izayoi_Theme_Tooltip.tres" id="1_ajj6s"]
[ext_resource type="Texture2D" uid="uid://bhofondcn84ew" path="res://sprites/UIPanel.png" id="2_83r3n"]
[ext_resource type="Script" uid="uid://drxuqtqtkggi1" path="res://scenes/trade_screen.gd" id="2_xrvbo"]
[ext_resource type="Texture2D" uid="uid://dqqimoeongvyg" path="res://sprites/character/debug/portrait_full.png" id="4_g8gfs"]
[ext_resource type="FontFile" uid="uid://di48a300uqd6d" path="res://fonts/VenomMincho-DOOyR.ttf" id="5_8syax"]
[ext_resource type="Theme" uid="uid://dpfc6p7ruw7wo" path="res://fonts/Izayoi_Theme_Items.tres" id="6_k4p7w"]
[ext_resource type="PackedScene" uid="uid://ws1f3jg0wotp" path="res://scenes/GUI/inventory_panel.tscn" id="8_hil8c"]
[ext_resource type="PackedScene" uid="uid://dfr2jdyxd14oy" path="res://scenes/GUI/convoy_pnl.tscn" id="9_fjgok"]
[ext_resource type="PackedScene" uid="uid://b2v4effpiibrw" path="res://scenes/GUI/options_pop_up.tscn" id="9_htpwm"]
[ext_resource type="PackedScene" uid="uid://b5pdi6fx5chy7" path="res://scenes/GUI/info_panel.tscn" id="10_pdk1d"]

[node name="trade_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("1_7goli")
script = ExtResource("2_xrvbo")
nFSize = 20
iFSize = 20

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_force_pass_scroll_events = false

[node name="CharacterArtGroup" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -151.0
offset_top = 178.0
offset_right = 2070.0
offset_bottom = 1557.0

[node name="MarginContainer" type="MarginContainer" parent="CharacterArtGroup"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="PrtPnl1" type="PanelContainer" parent="CharacterArtGroup/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="BackgroundCenter" type="NinePatchRect" parent="CharacterArtGroup/MarginContainer/PrtPnl1"]
visible = false
layout_mode = 2
texture = ExtResource("2_83r3n")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="CharacterArtGroup/MarginContainer/PrtPnl1"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="UnitPrt1" type="TextureRect" parent="CharacterArtGroup/MarginContainer/PrtPnl1/MarginContainer"]
custom_minimum_size = Vector2(700, 160)
layout_mode = 2
texture = ExtResource("4_g8gfs")
expand_mode = 5
stretch_mode = 4

[node name="ItemFxNode" type="Control" parent="CharacterArtGroup/MarginContainer/PrtPnl1/MarginContainer/UnitPrt1"]
anchors_preset = 0
offset_left = 336.0
offset_top = 291.767
offset_right = 376.0
offset_bottom = 331.767

[node name="PrtPnl2" type="PanelContainer" parent="CharacterArtGroup/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="BackgroundCenter" type="NinePatchRect" parent="CharacterArtGroup/MarginContainer/PrtPnl2"]
visible = false
layout_mode = 2
texture = ExtResource("2_83r3n")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="CharacterArtGroup/MarginContainer/PrtPnl2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="UnitPrt2" type="TextureRect" parent="CharacterArtGroup/MarginContainer/PrtPnl2/MarginContainer"]
custom_minimum_size = Vector2(700, 160)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("4_g8gfs")
expand_mode = 5
stretch_mode = 4
flip_h = true

[node name="TradeContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TradeContainer"]
layout_mode = 2
theme_override_constants/margin_top = 150

[node name="TradeScreenVBox" type="VBoxContainer" parent="TradeContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TradeContainer/MarginContainer/TradeScreenVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_ajj6s")
theme_override_constants/separation = 150

[node name="TradeBox1" type="VBoxContainer" parent="TradeContainer/MarginContainer/TradeScreenVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("6_k4p7w")

[node name="NamePnl1" type="PanelContainer" parent="TradeContainer/MarginContainer/TradeScreenVBox/HBoxContainer/TradeBox1"]
layout_mode = 2
size_flags_horizontal = 0

[node name="BackgroundCenter" type="NinePatchRect" parent="TradeContainer/MarginContainer/TradeScreenVBox/HBoxContainer/TradeBox1/NamePnl1"]
layout_mode = 2
texture = ExtResource("2_83r3n")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="TradeContainer/MarginContainer/TradeScreenVBox/HBoxContainer/TradeBox1/NamePnl1"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="NameLb1" type="Label" parent="TradeContainer/MarginContainer/TradeScreenVBox/HBoxContainer/TradeBox1/NamePnl1/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_8syax")
text = "Name"
horizontal_alignment = 1

[node name="TradePnl1" parent="TradeContainer/MarginContainer/TradeScreenVBox/HBoxContainer/TradeBox1" instance=ExtResource("8_hil8c")]
layout_mode = 2
_style = "Trade"

[node name="TradeBox2" type="VBoxContainer" parent="TradeContainer/MarginContainer/TradeScreenVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("6_k4p7w")

[node name="NamePnl2" type="PanelContainer" parent="TradeContainer/MarginContainer/TradeScreenVBox/HBoxContainer/TradeBox2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="BackgroundCenter" type="NinePatchRect" parent="TradeContainer/MarginContainer/TradeScreenVBox/HBoxContainer/TradeBox2/NamePnl2"]
layout_mode = 2
texture = ExtResource("2_83r3n")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="TradeContainer/MarginContainer/TradeScreenVBox/HBoxContainer/TradeBox2/NamePnl2"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="NameLb2" type="Label" parent="TradeContainer/MarginContainer/TradeScreenVBox/HBoxContainer/TradeBox2/NamePnl2/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_8syax")
text = "Name"
horizontal_alignment = 1

[node name="TradePnl2" parent="TradeContainer/MarginContainer/TradeScreenVBox/HBoxContainer/TradeBox2" instance=ExtResource("8_hil8c")]
layout_mode = 2
_style = "Trade"

[node name="ConvoyPnl" parent="TradeContainer/MarginContainer/TradeScreenVBox/HBoxContainer" instance=ExtResource("9_fjgok")]
layout_mode = 2
_style = "Trade"

[node name="InfoPanel" parent="TradeContainer/MarginContainer/TradeScreenVBox" instance=ExtResource("10_pdk1d")]
layout_mode = 2

[node name="OptionsPopUp" parent="." instance=ExtResource("9_htpwm")]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
